// file: pkg/cache/proto/requests/stats_request.proto
edition = "2023";

package gcommon.v1.cache;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/jdfalk/gcommon/pkg/cache/proto;cachepb";

option features.(pb.go).api_level = API_OPAQUE;

/**
 * Request to retrieve cache statistics.
 */
message GetStatsRequest {
  // Optional namespace filter
  string namespace = 1;

  // Request metadata
  gcommon.v1.common.RequestMetadata metadata = 2 [lazy = true];
}
