// filepath: pkg/metrics/proto/responses/get_stats_response.proto
// file: metrics/proto/responses/get_stats_response.proto
//
// Response containing metric statistics over a time range.
//
edition = "2023";

package gcommon.v1.metrics;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;

/**
 * GetStatsResponse returns statistics for a metric.
 */
message GetStatsResponse {
  // Statistics for the query
  QueryStats stats = 1;

  // Error information
  gcommon.v1.common.Error error = 2;
}
